--- a/private/templates/sbnext-common/settings.twig
+++ b/private/templates/sbnext-common/settings.twig
@@ -21,10 +21,10 @@
 			<td class="a">{{ __("Password") }}</td>
 			<td class="b">
 				<input type="password" name="current_pass" size="30" maxlength="256"
-					   placeholder="{{ __("Current Password (For verification)") }}"><br>
-				<input type="password" name="pass" size="30" maxlength="256" placeholder="{{ __("New Password") }}"><br>
+					   placeholder="{{ __("Current password") }}"><br>
+				<input type="password" name="pass" size="30" maxlength="256" placeholder="{{ __("New password") }}"><br>
 				<input type="password" name="pass2" size="30" maxlength="256"
-					   placeholder="{{ __("Repeat new Password") }}">
+					   placeholder="{{ __("Repeat new password") }}">
 			</td>
 		</tr>
 	</table>
@@ -40,12 +40,6 @@
 				<td class="a">{{ __("Profile picture") }}</td>
 				<td class="b">
 					<input class="form-control" type="file" name="profilePicture" id="profilePicture">
-				</td>
-			</tr>
-			<tr>
-				<td class="a">{{ __("Profile background") }}</td>
-				<td class="b">
-					<input class="form-control" type="file" name="profileBackground" id="profileBackground">
 				</td>
 			</tr>
 			<tr>
