artwork bunnycdn shit???
also i removed that dogshit broken "grid" homepage design.

--- a/private/templates/sbnext-common/components/player.twig
+++ b/private/templates/sbnext-common/components/player.twig
@@ -34,7 +34,7 @@
 
             {% if bunnyEnabled %}
             player.src([{
-                src: '{{ video.playlist }}',
+                src: '{{ video.bunny_url }}',
                 type: 'application/x-mpegURL'
             }]);
             {% else %}
