--- a/private/templates/sbnext-common/components/smallvideobox.twig
+++ b/private/templates/sbnext-common/components/smallvideobox.twig
@@ -1,12 +1,16 @@
 <div class="grid" style="margin-bottom: 5px;display:block;">
     <div class="col-md-4 ">
         <a href="watch.php?v={{ data.video_id }}">
+        {% if data.post_type == 0 %}
             <img class="img-fluid" src="{{ video_thumbnail(data.video_id) }}" alt="{{ data.title }}">
+        {% elseif data.post_type == 2 %}
+            <img class="img-fluid" src="{{ art_thumbnail(data.video_id) }}" alt="{{ data.title }}">
+        {% endif %}
         </a>
     </div>
     <div class="col-md-12 vid-info">
         <h3 class="title"><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
         <span class="stat">{{ __("by") }} {{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("views") }}</span>
-        <span class="stat">{{ video_length(data) }}</span>
+        <!-- <span class="stat">{{ video_length(data) }}</span> -->
     </div>
 </div>
