--- a/private/templates/sbnext-mobile/watch.twig
+++ b/private/templates/sbnext-mobile/watch.twig
@@ -21,7 +21,7 @@
             {% if postType == "video" %}
                 {{ include('/components/player.twig') }}
             {% elseif postType == "artwork" %}
-                <img class="img-fluid" src="{{ video.videofile }}" alt="{{ video.title }}">
+                {{ include('/components/artwork.twig') }}
             {% endif %}
 
             <div class="card card-body-fat" style="margin:0;border-bottom:none;padding-bottom:0;">
@@ -72,7 +72,7 @@
                     <div class="col-md-10">
                         <div id="About" class="tabcontent" style="display: block;">
                             <p><strong>{{ __("Published on %s", [video.time | date('M j, Y')]) }}</strong></p>
-                            <p>{{ video.description }}</p>
+                            <p>{{ video.description | markdown }}</p>
                             <div class="description-extra">
                                 <ul>
                                     <li>
