more precise graph data + fix admin link?

--- a/private/templates/sbnext-common/user.twig
+++ b/private/templates/sbnext-common/user.twig
@@ -22,7 +22,7 @@
                 <p class="center"><a href="settings.php">{{ __("Edit my settings") }}</a>
                     &bull; <a href="user.php?id={{ id }}&forceuser">{{ __("View user page as viewer") }}</a>
                     {% if userpagedata.powerlevel > 2 %}
-                    &bull; <a href="/admin/">{{ __("Admin panel") }}</a></p>
+                    &bull; <a href="/admin">{{ __("Admin panel") }}</a></p>
                 {% endif %}
                 </p>
             </div>
