--- a/private/templates/sbnext-common/components/player.twig
+++ b/private/templates/sbnext-common/components/player.twig
@@ -27,8 +27,8 @@
                 sourceOrder: true,
                 retryOnError: true,
                 aspectRatio: "16:9",
-                fluid: false,
-                autoplay: true,
+                fluid: true,
+                autoplay: false,
                 preload: "auto"
             });
 
