tailwind login + remove categories on finalium

--- a/private/templates/tailwind-common/upload.twig
+++ b/private/templates/tailwind-common/upload.twig
@@ -5,7 +5,7 @@
 	{% block content %}
         <form name="uploadForm" id="uploadForm" method="post" action="upload.php" enctype="multipart/form-data">
             <div class="space-y-12">
-                <div class="border-b border-gray-900/10 pb-12">
+                <div class="border border-gray-200 p-6 rounded">
                     <h2 class="text-base font-semibold leading-7 text-gray-900">{{ __("Upload info") }}</h2>
                     <p class="mt-1 text-sm leading-6 text-gray-600">{{ __("Enter the title and description of your upload.") }}</p>
                     <div class="mt-10 grid grid-cols-1 gap-x-6 gap-y-8 sm:grid-cols-6">
