--- a/private/templates/sbnext-common/upload.twig
+++ b/private/templates/sbnext-common/upload.twig
@@ -6,20 +6,20 @@
         <form name="uploadForm" id="uploadForm" method="post" action="upload.php" enctype="multipart/form-data">
             <div class="card">
                 <div class="card-body-fat">
-                    <h2 style="margin-bottom: 0.5em;">{{ __("Upload info") }}</h2>
-                    <p>{{ __("Enter the title and description of your upload.") }}</p>
-                    <h4 style="margin-bottom: 0.5em;">{{ __(" Title") }}</h4>
+                    <h2 style="margin-bottom: 0.5em;">{{ __("Upload a post") }}</h2>
+                    <p>{{ __("Enter the required information and select the file for your post.") }}</p>
+                    <h4 style="margin-bottom: 0.5em;">{{ __("Title") }}</h4>
                     <input type="text" class="form-control form-long uploader-form" id="title" name="title">
                     <br>
-                    <h4 style="margin-bottom: 0.5em;">{{ __(" Description") }}</h4>
+                    <h4 style="margin-bottom: 0.5em;">{{ __("Description") }}</h4>
                     <textarea class="form-control form-long uploader-form" name="desc" maxlength="2000"
                               form="uploadForm"
                               style="overflow:hidden;resize:none" rows="3"></textarea>
                     <br>
-                    <h4 style="margin-bottom: 0.5em;">{{ __(" Tags") }}</h4>
+                    <h4 style="margin-bottom: 0.5em;">{{ __("Tags (optional)") }}</h4>
                     <input type="text" class="form-control form-long uploader-form" name="tags">
-                    <h2 style="margin-bottom: 0.5em;">{{ __("File") }}</h2>
-                    <p>{{ __("Select the file you want to upload. Major video and image file formats are supported.") }}</p>
+                    <h2 style="margin-bottom: 0.5em;">{{ __("Select file") }}</h2>
+                    <p>{{ __("Most popular video and image formats should be supported.") }}</p>
                     <input class="form-control" type="file" name="fileToUpload" id="fileToUpload"
                            onchange="$('#title').val($('#fileToUpload').val().split('\\').pop().split('/').pop())"
                            required>
@@ -27,7 +27,7 @@
                     {% if isDebug %}
                         <label class="checkbox">
                             <input type="checkbox" id="debugUploaderSkip" name="debugUploaderSkip">
-                            {{ __("Skip processing (MP4 ONLY, DEBUG)") }}
+                            {{ __("Skip processing (Debug, MP4 only)") }}
                         </label>
                     {% endif %}
                     <div class="right">
