--- a/private/templates/sbnext-common/components/comment.twig
+++ b/private/templates/sbnext-common/components/comment.twig
@@ -1,6 +1,7 @@
 <div class="grid commentPost">
     <div class="col-md-3">
         {{ userlink(data, 'u_') }}
+        {% if data.u_powerlevel > 1 %}{{ icon("shield", 16) }}{% endif %}
 		<br>
 		<span class="time">{{ data.date | relative_time }}</span>
     </div>
