--- a/private/templates/sbnext-common/components/smallvideobox.twig
+++ b/private/templates/sbnext-common/components/smallvideobox.twig
@@ -10,7 +10,7 @@
     </div>
     <div class="col-md-12 vid-info">
         <h3 class="title"><a href="watch.php?v={{ data.video_id }}">{{ data.title }}</a></h3>
-        <span class="stat">{{ __("by") }} {{ userlink(data, 'u_') }} &bull; {{ data.views }} {{ __("views") }}</span>
+        <span class="stat">{{ __("by") }} {{ userlink(data, 'u_') }} {% if data.u_powerlevel > 1 %}{{ icon("shield", 14) }}{% endif %} &bull; {{ data.views }} {{ __("views") }}</span>
         <!-- <span class="stat">{{ video_length(data) }}</span> -->
     </div>
 </div>
