--- a/private/templates/sbnext-common/components/videolist.twig
+++ b/private/templates/sbnext-common/components/videolist.twig
@@ -3,6 +3,6 @@
 {% endfor %}
 <div class="center">
     <div class="button button-secondary" onclick="showMoreVideos()" id="fromUser">
-        {{ __("More videos") }}
+        {{ __("More") }}
     </div>
 </div>
